@@ -31,7 +31,6 @@ abstract class ContentHelperRoute
 		);
 		//Create the link
 		$link = 'index.php?option=com_content&view=article&id='. $id;
-
 		if ((int) $catid > 1)
 		{
 			$categories = JCategories::getInstance('Content');
