@@ -326,11 +326,8 @@ function ContentParseRoute($segments)
 		}
 		else
 		{
-			if ($cat_id > 0)
-			{
-				$vars['view'] = 'category';
-				$vars['id'] = $cat_id;
-			}
+			$vars['view'] = 'category';
+			$vars['id'] = $cat_id;
 		}
 
 		return $vars;
